<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/CardViewStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="4dp"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardBackgroundColor="@color/white"
    app:cardElevation="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="false"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/editDeleteL"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titleTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/descrTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:text="@string/Description"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/createDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:text="@string/Date"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/deadlineDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:text="@string/deadlineDate"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/statusP"
                android:layout_marginVertical="4dp"
                android:textColor="@color/black"
                android:textSize="18sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/editDeleteL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/editImg"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginVertical="4dp"
                android:src="@drawable/edit"
                android:contentDescription="@string/Nil"/>

            <ImageView
                android:id="@+id/deleteImg"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginVertical="4dp"
                android:src="@drawable/delete"
                android:contentDescription="@string/Nil"/>
        </LinearLayout>
    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>