<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/CutShape"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="10dp"
    app:cardBackgroundColor="@color/white"
    app:cardElevation="10dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/titleTaskTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/Update"
            android:textStyle="bold"
            android:textSize="24sp" />
        <ImageView
            android:id="@+id/close"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="8dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/close" />
        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_below="@+id/titleTaskTxt"
            android:background="@color/black"
            android:id="@+id/viewLine"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/viewLine"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="8dp"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/edTaskTitleL"
                style="@style/Widget.App.TextInputLayout"
                app:hintEnabled="false">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    android:hint="@string/Title"
                    style="@style/Widget.App.TextInputLayout"
                    android:textSize="25sp"
                    android:id="@+id/edTaskTitle"
                    android:background="@color/purple_200"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/edTaskTDescL"
                style="@style/Widget.App.TextInputLayout"
                app:hintEnabled="false">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    style="@style/Widget.App.TextInputLayout"
                    android:hint="@string/Description"
                    android:layout_height="wrap_content"
                    android:background="@color/pink"
                    android:textSize="25sp"
                    android:gravity="top|start"
                    android:lines="5"
                    android:maxLines="5"
                    android:id="@+id/edTaskDesc"
                    android:inputType="textMultiLine"/>

            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/status"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/statusP"
                android:textSize="20sp"
                android:layout_marginStart="10dp"/>
            <Button
                android:id="@+id/deadlineButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Deadline"
                android:textSize="20sp"
                android:layout_marginStart="10dp"/>
            <Button
                android:id="@+id/updateTaskBtn"
                android:layout_width="wrap_content"
                android:layout_height="?actionBarSize"
                android:layout_marginTop="4dp"
                android:backgroundTint="@color/black"
                android:text="@string/Update"
                android:textSize="20sp"
                style="Widget.AppCompat.Button.fill"
                android:layout_gravity="center"/>
        </LinearLayout>
    </RelativeLayout>
</com.google.android.material.card.MaterialCardView>